--- a/CSS_LEVEL_TWO/Box_model.css
+++ b/CSS_LEVEL_TWO/Box_model.css
@@ -12,3 +12,14 @@
     padding: 200px;
     text-align: center;
 }
+.main-div{
+    
+    display: inline-block;
+}
+#right{
+    border: 4px solid rgb(145, 255, 0);
+    width: 50%;
+    padding: 200px;
+    text-align: center;
+
+}
